# Percy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  _test_tunnel.py  bot.py  config.py  data_storage.json  docker-compose.yml  launcher.py  main.py  pyproject.toml  requirements.txt  test.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
app/clients/: __init__.py  base.py  groq.py  lyrics.py  ollama.py  translate.py
app/cogs/: __init__.py  admin.py  assistant.py  audit_log.py  automod.py  config.py  context_menus.py  dstatus.py  economy.py  emoji.py  gimmicks.py  giveaway.py  highlight.py  internal_api.py  leveling.py  meta.py  mod.py  notes.py  polls.py  reminder.py  stat_counters.py  stats.py  tags.py  temp_channels.py  translator.py  user.py  web_utils.py  webhooks.py
app/core/: __init__.py  bot.py  command.py  components_v2.py  context.py  converter.py  embeds.py  errors.py  feature_flags.py  flags.py  help.py  models.py  pagination.py  permissions.py  spam.py  timer.py  tree.py  views.py
app/database/: __init__.py  base.py  migrations.py
app/games/: __init__.py
app/i18n/: locale.py
app/internal_api/: __init__.py  auth.py  base.py  changelog.py  cog.py  content.py  dependencies.py  economy.py  guild.py  helpers.py  leveling.py  members.py  models.py  moderation.py  music.py  profile.py  server.py  stats.py  votes.py
app/rendering/: __init__.py  _color.py  _history.py  _leveling.py  _music.py  _user.py  models.py  pillow.py  primitives.py  service.py
app/services/: __init__.py  analytics.py  backup.py  bot_health.py  char_info.py  code_stats.py  economy.py  gateway_stats.py  klappstuhl_me.py  lyrics.py  presence_stats.py  purge.py  recurrence.py  spam_penalty.py  webhooks.py
app/utils/: __init__.py  ansi.py  cache.py  checks.py  config.py  constants.py  formats.py  fuzzy.py  helpers.py  lock.py  logging.py  metrics.py  pagination.py  progress.py  query_tracker.py  signals.py  tasks.py  timetools.py  types.py  wrapper.py
assets/: wordle_words.txt
cogs/: __init__.py  admin.py  anisearch.py  annotations.py  audit_log.py  automod.py  base.py  comicpulls.py  config.py  dbots.py  documentation.py  dstatus.py  economy.py  emoji.py  giveaway.py  jishaku.py  leveling.py  meta.py  mod.py  pep.py  polls.py  random.py  reminder.py  starboard.py  stats.py  tags.py  temp_channels.py  twitch.py  user.py  wolfram.py  youtube.py
cogs/ai/: __init__.py  _cog.py  _image.py
cogs/anisearch/: __init__.py  _client.py  _cog.py  _formatter.py
cogs/comic/: __init__.py  _cache.py  _client.py  _cog.py  _data.py  _parser.py
cogs/doc/: __init__.py  _batch_parser.py  _cache.py  _cog.py  _html.py  _inventory_parser.py  _markdown.py  _parsing.py
cogs/games/: __init__.py  _blackjack.py  _classes.py  _cog.py  _hangman.py  _minesweeper.py  _poker.py  _roulette.py  _tictactoe.py
cogs/imagine/: _api.py  _enum.py
cogs/minigames/: __init__.py  _cog.py  _hangman.py  _minesweeper.py  _tictactoe.py  hangman.py  minesweeper.py  tictactoe.py
cogs/music/: __init__.py  _music.py  _player.py  _playlist.py  _queue.py
cogs/snekbox/: __init__.py  _cog.py  _eval.py  _formatter.py  _service.py
cogs/utils/: StringMatcher.py  _commands.py  async_utils.py  cache.py  checks.py  commands.py  commands_ext.py  docs.py  (+22 more)
migrations/: V10__Emoji_Migrations.sql  V10__casino_economy_migration.sql  V10__discordstatus_addition.sql  V10__gatekeeper.sql  V10__sentinel.sql  V11__casino_economy_migration.sql  V11__level_migration.sql  V11__music_playlist_commands.sql  V12__discordstatus_addition.sql  V12__temp_channel_commands.sql  V13__item_history_migration.sql  V14__user_notes_migration.sql  V15__highlight_migration.sql  V16__starboard.sql  V17__moderation_cases.sql  V18__economy_shop.sql  V19__role_menus.sql  V1__Initial_migrations.sql  V20__community_economy_voice.sql  V21__mod_logging_channels.sql  V22__xp_history.sql  V23__anilist_users.sql  V24__economy_item_effects.sql  V25__game_stats.sql  V26__economy_balance_index.sql  V27__user_data_tracking.sql  V28__starboard_gating.sql  V29__music_sessions.sql  V2__automod_changes.sql  V2__lockdowns.sql  V30__music_dj_mode.sql  V31__vote_rewards.sql  V32__ai_config.sql  V33__hot_path_indexes.sql  V34__economy_expansion.sql  V35__command_permission_overrides.sql  V36__outbound_webhooks.sql  V37__guild_templates.sql  V3__app_command_statistics.sql  V3__poll_giveaway_commands.sql  (+26 more)
tests/: conftest.py  test_ai_alert.py  test_ai_config.py  test_ai_dashboard_ask.py  test_ai_events.py  test_ai_moderation.py  test_ai_music.py  test_ai_prompts.py  test_ai_router.py  test_ai_service.py  test_ai_tags.py  test_analytics_service.py  test_assistant_thread.py  test_autoresponder_matcher.py  test_backup_service.py  test_bot_health.py  test_cache.py  test_char_info.py  test_clients.py  test_code_stats.py  test_database.py  test_doc_engine.py  test_economy_expansion.py  test_economy_service.py  test_formats.py  test_fuzzy.py  test_game_engines.py  test_game_stats_repository.py  test_gateway_stats.py  test_help_partition.py  test_klappstuhl_client.py  test_lyrics.py  test_migrations.py  test_moderation_repository.py  test_modlog_models.py  test_music_repository.py  test_number_range.py  test_permissions.py  test_poker_engine.py  test_presence_stats.py  (+10 more)
(+247 files in other folders)
