[tool.poetry]
name = "percy-v2"
version = "2.3.0"
description = "A multipurpose Discord Bot for moderation and more."
authors = ["Klappstuhl"]
license = "MPL-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
aiohttp = "^3.13.4"
beautifulsoup4 = "^4.12.3"
dateparser = "^1.2.0"
asyncpg = "^0.31.0"
wavelink = ">=3.2.0"
python-dotenv = "^1.0.1"
pillow = ">=10.0.0"
psutil = "^6.1.1"
lxml = "6.1.0"
pytz = "^2024.1"
click = "^8.1.7"
expiringdict = "^1.2.2"
lru-dict = "^1.3.0"
captcha = "^0.6.0"
python-dateutil = "^2.9.0.post0"
matplotlib = "^3.8.3"
numpy = "^2.2.1"
joblib = "^1.3.2"
scipy = "^1.12.0"
typing-extensions = "^4.10.0"
yarl = "^1.9.4"
levenshtein = "^0.26.1"
pygit2 = "^1.14.1"
markdownify = "^0.14.1"
regex = "^2024.11.6"
pilmoji = {git = "https://github.com/jay3332/pilmoji", branch = "2.0"}
fonttools = "^4.50.0"
discord-py = {extras = ["voice"], version = "^2.7.1"}
parsedatetime = "^2.6"
sshtunnel = "^0.4.0"
paramiko = ">=2.7.2,<4"
fastapi = "^0.138.0"
uvicorn = "^0.49.0"
python-multipart = "^0.0.32"
klappstuhl = {git = "https://github.com/klappstuhlpy/klappstuhl.py", tag = "v0.2.0"}

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0"
pyright = ">=1.1.0"
pytest = ">=8.0"
pytest-asyncio = ">=0.24"

[tool.ruff]
target-version = "py312"
line-length = 125

[tool.ruff.lint]
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "PLR2004",
    "RUF001",
    "RUF009",
    "SIM105",
    "S101",
    "UP034",
    "ANN001",
    "ANN401",
]

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "basic"
pythonVersion = "3.12"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
reportMissingImports = "error"
reportUnusedImport = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
reportUnusedExpression = "none"
reportGeneralTypeIssues = "none"
reportDuplicateImport = "none"
reportUntypedFunctionDecorator = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportAssignmentType = "none"
reportReturnType = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportOptionalMemberAccess = "none"
reportOptionalIterable = "none"
reportOptionalSubscript = "none"
reportOptionalOperand = "none"
reportIndexIssue = "none"
reportOperatorIssue = "none"
reportInvalidTypeForm = "none"
reportInvalidTypeVarUse = "none"
reportFunctionMemberAccess = "none"
reportPrivateImportUsage = "none"
reportUndefinedVariable = "none"
reportRedeclaration = "none"
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-ra -q"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
